feat(auth): implement JWT refresh strategy and guard, update auth controller and service feat(products): add featuredPhoto property to product response DTO feat: add cookie-parser middleware and update package dependencies
